--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>yieldbot</groupId>
 	<artifactId>storm-cassandra</artifactId>
-	<version>0.4.0-rc5</version>
+	<version>0.5.0-SNAPSHOT</version>
 	<name>Storm Cassandra Support</name>
 	<description>Storm Cassandra Support</description>
 
@@ -58,8 +58,8 @@
 	</repositories>
 
 	<properties>
-		<storm.version>0.9.0.1</storm.version>
-		<astyanax.version>1.56.44</astyanax.version>
+		<storm.version>0.9.2-incubating</storm.version>
+		<astyanax.version>2.0.1</astyanax.version>
 	</properties>
 
 	<dependencies>
@@ -80,8 +80,8 @@
 			<version>1.6.4</version>
 		</dependency>
 		<dependency>
-			<groupId>storm</groupId>
-			<artifactId>storm</artifactId>
+			<groupId>org.apache.storm</groupId>
+			<artifactId>storm-core</artifactId>
 			<version>${storm.version}</version>
 			<!-- keep storm out of the jar-with-dependencies -->
 			<scope>provided</scope>
@@ -94,7 +94,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.netflix.astyanax</groupId>
-			<artifactId>astyanax</artifactId>
+			<artifactId>astyanax-core</artifactId>
 			<version>${astyanax.version}</version>
 			<exclusions>
 				<exclusion>
@@ -102,6 +102,16 @@
 					<groupId>commons-lang</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+                <dependency>
+			<groupId>com.netflix.astyanax</groupId>
+			<artifactId>astyanax-thrift</artifactId>
+			<version>${astyanax.version}</version>
+		</dependency>
+                <dependency>
+			<groupId>com.netflix.astyanax</groupId>
+			<artifactId>astyanax-cassandra</artifactId>
+			<version>${astyanax.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
